prevent weird jumping when lazy loading replies

--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,10 @@ main {
     gap: 2rem;
 }
 
+.hidden {
+    display: none;
+}
+
 /* === POST FORM === */
 
 #make-post-container {
